corrected khan buy link, no longer stretches entire height

--- a/blocks/khan/__book-container/khan__book-container.css
+++ b/blocks/khan/__book-container/khan__book-container.css
@@ -2,4 +2,5 @@
   display: flex;
   overflow: hidden;
   margin-bottom:-330px;
+  align-items: flex-start
 }
