--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -1,5 +1,4 @@
 .khan__buy-link {
-  display: inline-block;
   line-height: 42px;
   font-size: 30px;
   font-weight: normal;
